vlib/v/checker/tests/unknown_method.out
vlib/v/checker/tests/unknown_method.vv:7:12: error: unknown method or field: `Test.sdd`
    5 | fn main() {
    6 |     t := Test{}
    7 |     println(t.sdd())
      |               ~~~~~
    8 | }
